# iblai-mcp

./: .gitignore  CLAUDE.md  README.md
.github/: dependabot.yml
iblai-agent-chat/: README.md
iblai-agent-create/: README.md
iblai-analytics/: README.md
iblai-blog/: .env.example  README.md  pyproject.toml
iblai-blog/iblai_blog/: __init__.py  auth.py  client.py  server.py
iblai-canvas-course/: README.md
iblai-canvas-user/: README.md
iblai-instructure/: .env.example  README.md  pyproject.toml
iblai-instructure/iblai_instructure/: __init__.py  auth.py  client.py  server.py
iblai-mentorai-chat/: README.md
iblai-search/: README.md
iblai-user/: README.md
mcp-creator/: README.md  cli.py  har_parser.py  mcp_generator.py  pyproject.toml
